# grupo9_RA2

./: .gitignore  CMakeLists.txt  README.md  ra2_main.cpp
algorithms/: Cache.h  cache.cpp
algorithms/lfu/: Lfu.h  lfu.cpp
algorithms/random_replacement/: RandomReplacement.h  randomReplacement.cpp
algorithms/s3_fifo/: S3Fifo.h  s3Fifo.cpp
core/disk_io/: DiskIo.h  diskIo.cpp
results/: hit_rates_data.txt
simulation/: Simulator.h  simulator.cpp
texts/: text_02.txt  text_03.txt  text_07.txt  text_09.txt  text_1.txt  text_10.txt  text_100.txt  text_11.txt  text_12.txt  text_13.txt  text_14.txt  text_15.txt  text_16.txt  text_17.txt  text_18.txt  text_19.txt  text_20.txt  text_21.txt  text_22.txt  text_23.txt  text_24.txt  text_25.txt  text_26.txt  text_27.txt  text_28.txt  text_29.txt  text_30.txt  text_31.txt  text_32.txt  text_33.txt  text_34.txt  text_35.txt  text_36.txt  text_37.txt  text_38.txt  text_39.txt  text_4.txt  text_40.txt  text_41.txt  text_42.txt  (+60 more)
